--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sem-5-project",
+  "name": "frontend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,6 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6"
-  }
+  },
+  "description": ""
 }
